--- a/landscape.css
+++ b/landscape.css
@@ -1,6 +1,7 @@
 body {
     margin: 0px;
     padding: 0px;
+    overflow-x:hidden;
 }
 
 .skyBlock {
@@ -14,14 +15,21 @@ body {
     background-image: -ms-linear-gradient(top,rgb(25, 173, 249) 0%,rgb(227, 255, 255) 101.8%);
 }
 
-.grountBlock {
+.groundBlock {
     width: 100%;
     bottom: 0;
     position: absolute;
     background-image: url(res/gr1.png);
 }
 
-
+.cloud {
+    position: inherit;
+    top: 0;
+    height: 60px;
+    width: 80px;
+    left: -100px;
+    background-repeat: no-repeat;
+}
 
 #tree {
     position: inherit;
@@ -37,27 +45,6 @@ body {
     width: 100%;
     background-image: url(res/grass.png);
     background-repeat: repeat-x;
-    height: 30px;
+    height: 26px;
     bottom: 0px;
-}
-
-#clouds	{
-    width: 100%;
-    height: 100px;
-    position: inherit;
-    background-image: url(res/test3.png);
-    background-position: 0px 0px;
-    background-repeat: no-repeat;
-
-
-    animation: animatedClouds 120s linear infinite;
-    -webkit-animation: animatedClouds 120s linear infinite;
-}
-@keyframes animatedClouds {
-    from { background-position: 0 0; }
-    to { background-position: 300% 0; }
-}
-@-webkit-keyframes animatedClouds {
-    from { background-position: 0 0; }
-    to { background-position: 300% 0; }
 }
