--- a/css/controls.css
+++ b/css/controls.css
@@ -124,9 +124,28 @@ figure {
     top:1px;
 }
 
-.chooseLevel {
+.level {
     position: inherit;
     top:0px;
     left: 70px;
+}
+
+.chooselevel {
+    position: absolute;
+    width: 290px;
+    height: 140px;
+    top: -300px;
+    z-index: 4;
+
+    border: 6px rgb(183, 157, 86) groove;
+    background: rgb(197, 170, 94);
+
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+
+    -moz-box-shadow: 0px 0px 142px 49px rgb(201, 201, 201);
+    -webkit-box-shadow: 0px 0px 142px 49px rgb(201, 201, 201);
+    box-shadow: 0px 0px 142px 49px rgb(201, 201, 201);
 }
 
