--- a/css/controls.css
+++ b/css/controls.css
@@ -1,3 +1,20 @@
+table {
+    position: absolute;
+    z-index: 4;
+    transition: 2s;
+    top: -100px;
+    border: 6px rgb(183, 157, 86) groove;
+    background: rgb(197, 170, 94);
+
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+
+    -moz-box-shadow: 0px 0px 142px 49px rgb(201, 201, 201);
+    -webkit-box-shadow: 0px 0px 142px 49px rgb(201, 201, 201);
+    box-shadow: 0px 0px 142px 49px rgb(201, 201, 201);
+}
+
 .menuButton {
     position: inherit;
     width: 50px;
