--- a/css/controls.css
+++ b/css/controls.css
@@ -1,20 +1,3 @@
-table {
-    position: absolute;
-    z-index: 4;
-    transition: 2s;
-    top: -100px;
-    border: 6px rgb(183, 157, 86) groove;
-    background: rgb(197, 170, 94);
-
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-
-    -moz-box-shadow: 0px 0px 142px 49px rgb(201, 201, 201);
-    -webkit-box-shadow: 0px 0px 142px 49px rgb(201, 201, 201);
-    box-shadow: 0px 0px 142px 49px rgb(201, 201, 201);
-}
-
 .menuButton {
     position: inherit;
     width: 50px;
@@ -46,8 +29,7 @@ table {
 }
 
 #card {
-    top: 0;
-    left: 0;
+    right: 80px;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -119,7 +101,7 @@ figure {
     display:inline-block;
     cursor:pointer;
     color:#505739;
-    font-family:Phosphate;
+    font-family: "Marker Felt";
     font-size:14px;
     font-weight:bold;
     padding:12px 16px;
@@ -137,11 +119,20 @@ figure {
     background-color:#ccc2a6;
 }
 
-.menuButtonsDataBase{
+.okButtonDataBase{
     position: inherit;
-    right: 10px;
-    top: 50px;
+    top: 55px;
+    right: 60px;
     width: 30px;
+    height: 5px;
+    font-size: 12px;
+}
+
+.backButtonDataBase{
+    position: inherit;
+    top: 55px;
+    right: 10px;
+    width: 10px;
     height: 5px;
     font-size: 12px;
 }
@@ -153,13 +144,21 @@ figure {
     width: 80%;
 }
 
-.tableDataBase{
+
+TABLE {
+    border-collapse: collapse;
     position: inherit;
-    top: 90px;
+    top: 100px;
     width: 80%;
     height: auto;
-    border: 4px outset blue;
     left: 10%;
+}
+TD, TH {
+    padding: 3px;
+    border: 1px solid black;;
+}
+TH {
+    background: #b0e0e6;
 }
 
 .level {
@@ -169,8 +168,8 @@ figure {
 }
 
 .chooselevel {
-    transition: 2s;
     position: absolute;
+    transition: 2s;
     width: 290px;
     height: 140px;
     top: -300px;
@@ -192,14 +191,13 @@ figure {
     transition: 2s;
     position: absolute;
     background: rgb(255,255,255);
-    width: 400px;
     height: 139px;
     top: -300px;
     border: 1px rgb(255, 255, 255) solid;
     z-index: 5;
     font-size: 48px;
     font-weight: inherit;
-    font-family: Phosphate;
+    font-family: "Marker Felt";
     font-style: inherit;
     text-decoration: inherit;
     text-align: center;
@@ -221,7 +219,7 @@ figure {
     color: #000;
     display: inline-block;
     padding: 5px 15px;
-    font: normal 700 18px/1 "Phosphate", sans-serif;
+    font: normal 700 18px/1 "Marker Felt", sans-serif;
     text-align: center;
     text-shadow: none;
 }
