--- a/css/landscape.css
+++ b/css/landscape.css
@@ -29,6 +29,16 @@ body {
     background-image: url(../res/gr1.png);
 }
 
+.statisticText{
+    position: relative;
+    left: 10px;
+    top: 25px;
+    font-size: 30px;
+    font-weight: inherit;
+    font-family: "Marker Felt";
+
+}
+
 .cloud {
     position: inherit;
     top: 0;
