--- a/css/landscape.css
+++ b/css/landscape.css
@@ -33,9 +33,10 @@ body {
     position: relative;
     left: 10px;
     top: 25px;
+    font-family: Phosphate;
+    color: #E8D956;
     font-size: 30px;
     font-weight: inherit;
-    font-family: "Marker Felt";
 
 }
 
